Adjust header spacing resolves issue #220

--- a/css/styles.css
+++ b/css/styles.css
@@ -9365,7 +9365,7 @@ div.desc {
 
 
 .col-flex-text {
-  height:17em;
+  height: 10em;
 }
 .gallery-flex {
   display: -webkit-box;
